fix: feature box alignment

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -199,6 +199,7 @@ section.features {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
 
